# CMinioPy

./: .gitignore  CMakeLists.txt  setup.py
include/: ListObjectsGenerator.h  MinioApi.h  external.h
src/: MinioApi.cpp  main.cpp
tests/: client_create.py
